Bug 1517385 - Use "visibility: hidden" to keep the frame of AccessibleCaret alive. r=TYLin
Depends on D96506

Differential Revision: https://phabricator.services.mozilla.com/D94072

UltraBlame original commit: d3e9f74c23d7fb0970b4833a90ab5fe4b38b8d91

--- a/layout/style/res/ua.css
+++ b/layout/style/res/ua.css
@@ -3278,6 +3278,26 @@ display
 none
 ;
 }
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+hidden
+{
+visibility
+:
+hidden
+;
+}
 media
 (
 min
